--- a/package.json
+++ b/package.json
@@ -41,12 +41,16 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@types/node": "^22.9.0",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
     "eslint": "^9.30.0",
     "eslint-plugin-react": "^7.37.5",
+    "husky": "^9.1.7",
+    "semantic-release": "^24.2.6",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typedoc-plugin-markdown": "^4.6.3",
