--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
+    "@semantic-release/npm": "^12.0.2",
     "@types/node": "^22.9.0",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
