--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,16 +10,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: pnpm/action-setup@v2
         with:
           version: 8
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: "https://registry.npmjs.org"
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm build
-      - run: pnpm test
-      - run: npx semantic-release
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+        working-directory: sdk
+
+      - name: Build
+        run: pnpm build
+        working-directory: sdk
+
+      - name: Test
+        run: pnpm test
+        working-directory: sdk
+
+      - name: Release
+        run: npx semantic-release
+        working-directory: sdk
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
