--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GH_TOKEN }}
-
+    
       - uses: pnpm/action-setup@v4
 
       - uses: actions/setup-node@v4
@@ -32,5 +30,5 @@ jobs:
       - name: Release
         run: npx semantic-release
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
