ci: mark public

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "tag": "latest"
+    "tag": "latest",
+    "access": "public"
   },
   "exports": {
     ".": {
